--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         </h3>
     </section>
     <div>
-        <p class="ecosystem">Deploy workloads or apps between any Cloud or On-premises</p>
+        <p class="ecosystem">Deploy workloads or apps on any Cloud or within Datacenters</p>
         <img class="logo onprem" src="images/OnPrem.JPG" alt="dc">
         <img class="logo public-cloud-1" src="images/PublicCloud1.JPG" alt="dc">
         <img class="logo public-cloud-2" src="images/PublicCloud2.JPG" alt="dc">
@@ -318,21 +318,21 @@
                 <div class="card">
                     <div class="card-header">
                         <h3 class="features">For Small Business</h3>
-                        <h4 class="dollar">99$ <span class="plan">Per Instance</span></h4>
+                        <h4 class="dollar">99$ <span class="plan">Per Month</span></h4>
                     </div>
                     <div class="card-body">
                         <ul>
                             <li class="srv-desc">
-                                <a>Manage upto 10 Instances</a>
+                                <a>Deploy on Kubernetes Cluster</a>
                             </li>
                             <li class="srv-desc">
-                                <a>Community Driven Plugins</a>
+                                <a>Leverages containerized apps</a>
                             </li>
                             <li class="srv-desc">
                                 <a>Supports Multi-Cloud workloads</a>
                             </li>
                             <li class="srv-desc">
-                                <a>Shared GitHub Repos</a>
+                                <a>Useful to run non-prod applications</a>
                             </li>
                         </ul>
                         <div class="button">
@@ -345,18 +345,18 @@
                 <div class="card">
                     <div class="card-header">
                         <h3 class="features">For Medium Business</h3>
-                        <h4 class="dollar">199.9$ <span class="plan">Per Instance</span></h4>
+                        <h4 class="dollar">199.9$ <span class="plan">Per Month</span></h4>
                     </div>
                     <div class="card-body">
                         <ul>
                             <li class="srv-desc">
-                                <a>Manage upto 100 Instances</a>
+                                <a>Deploying Containers or Microservices on K8s</a>
                             </li>
                             <li class="srv-desc">
-                                <a>Enterprise Plugins with Support</a>
+                                <a>Use available Pipeline-as-Code</a>
                             </li>
                             <li class="srv-desc">
-                                <a>Angular UI to manage via Web</a>
+                                <a>Version Control, Full Automation & HA available</a>
                             </li>
                             <li class="srv-desc">
                                 <a>Works with any Virtual workloads</a>
@@ -372,18 +372,18 @@
                 <div class="card">
                     <div class="card-header">
                         <h3 class="features">For Enterprise Business</h3>
-                        <h4 class="dollar">Custom Pricing <span class="plan"></span></h4>
+                        <h4 class="dollar">Request Quote <span class="plan"></span></h4>
                     </div>
                     <div class="card-body">
                         <ul>
                             <li class="srv-desc">
-                                <a>Unlimited number of Instacnes</a>
+                                <a>Autoscaling of K8s with Multi-Region options</a>
                             </li>
                             <li class="srv-desc">
-                                <a>Enterprise Plugins & Support</a>
+                                <a>Enterprise Automation/Orchestration Stack</a>
                             </li>
                             <li class="srv-desc">
-                                <a>Automation roll-back options</a>
+                                <a>Integration with Microservices & ServiceMesh</a>
                             </li>
                             <li class="srv-desc">
                                 <a>SSO, ActiveDirectory & LDAP enabled</a>
